--- a/config/configuration.ini
+++ b/config/configuration.ini
@@ -1,7 +1,7 @@
 [Project]
 mode = release
-sites = Site01,Site02,Site03,Site04,Site05,Site06,Site07,Site08,Site09,Site10,Site11,Site12,Site13,Site14,Site15,Site16,Site17,Site18,Site19,Site20,Site21,Site22,Site23,Site24,Site25,Site26
-sites1 = Site14
+#site1 = Site01,Site02,Site03,Site04,Site05,Site06,Site07,Site08,Site09,Site10,Site11,Site12,Site13,Site14,Site15,Site16,Site17,Site18,Site19,Site20,Site21,Site22,Site23,Site24,Site25,Site26,Site27
+sites = Site27
 notify = ding
 
 [Database]
@@ -203,4 +203,10 @@ name = 浙江省公共资源交易-交易信息
 url = http://new.zmctc.com/zjgcjy/jyxx/004001/004001001/?Paging=${PAGENUMBER}$
 info_url_key = InfoDetail/?InfoID=
 name_tag = title
+
+[Site27]
+name = 重庆市工程建设招标投标交易信息网
+url = http://www.cpcb.com.cn/Front.aspx/Zbgg/${PAGENUMBER}$
+info_url_key = /Front.aspx/ggsjxq/
+name_tag =
 
